<resources>
    <string name="app_name">OkBankPoC</string>

    <string name="okpoc_0002_str_001">OK통합인증 하나로\n안전하고 빠르게 이용하세요.</string>
    <string name="okpoc_0002_str_002">시작하기</string>


    <string name="okpoc_0003_str_001">이용악관 전체 동의</string>
    <string name="okpoc_0003_str_002">[필수] 본인확인 서비스 이용약관 동의</string>
    <string name="okpoc_0003_str_003">[필수] 고유식별정보 처리 동의</string>
    <string name="okpoc_0003_str_004">[필수] 이동통신사 이용약관 동의</string>
    <string name="okpoc_0003_str_005">[필수] 본인확인 개인정보 수집 이용 동의</string>
    <string name="okpoc_0003_str_006">이름</string>
    <string name="okpoc_0003_str_007">이름입력</string>
    <string name="okpoc_0003_str_008">휴대폰번호</string>
    <string name="okpoc_0003_str_009">통신사선택</string>
    <string name="okpoc_0003_str_010">\'-\' 없이 입력</string>
    <string name="okpoc_0003_str_011">인증번호</string>
    <string name="okpoc_0003_str_012">인증번호 입력</string>
    <string name="okpoc_0003_str_013">인증요청</string>
    <string name="okpoc_0003_str_014">확인</string>
    <string name="okpoc_0003_str_015">휴대본 본인인증</string>
    <string name="okpoc_0003_str_016">재인증</string>

    <string name="okpoc_0007_str_001">님!</string>
    <string name="okpoc_0007_str_002">반갑습니다.</string>
    <string name="okpoc_0007_str_003">대출계약대기</string>
    <string name="okpoc_0007_str_004">실행완료</string>
    <string name="okpoc_0007_str_005">원</string>
    <string name="okpoc_0007_str_006">계약서 작성</string>
    <string name="okpoc_0007_str_007">보유 포인트</string>
    <string name="okpoc_0007_str_008">P</string>
    <string name="okpoc_0007_str_009">전환 내역</string>
    <string name="okpoc_0007_str_010">포인트 전환</string>
    <string name="okpoc_0007_str_011">보유 코인</string>
    <string name="okpoc_0007_str_012">C</string>
    <string name="okpoc_0007_str_013">사용 내역</string>

    <string name="okpoc_0008_str_001">확인</string>

    <string name="okpoc_0009_str_001">김옥희 고객님의\n전자계약이 완료되였습니다.</string>
    <string name="okpoc_0009_str_002">상품명</string>
    <string name="okpoc_0009_str_003">대출금액</string>
    <string name="okpoc_0009_str_004">지급계좌</string>
    <string name="okpoc_0009_str_005">계약자</string>
    <string name="okpoc_0009_str_006">계약일시</string>
    <string name="okpoc_0009_str_007">전자계약 관련 문의사항은\n고객센터(1899-7979)로 연락 부탁드립니다.</string>
    <string name="okpoc_0009_str_008">확인</string>

    <string name="okpoc_0010_str_001">OK포인트 전환</string>
    <string name="okpoc_0010_str_002">OK포인트</string>
    <string name="okpoc_0010_str_003">P</string>
    <string name="okpoc_0010_str_004">OK코인</string>
    <string name="okpoc_0010_str_005">C</string>
    <string name="okpoc_0010_str_006">포인트를 입력하세요.</string>
    <string name="okpoc_0010_str_007">+1,000</string>
    <string name="okpoc_0010_str_008">+5,000</string>
    <string name="okpoc_0010_str_009">+10,000</string>
    <string name="okpoc_0010_str_010">전체</string>
    <string name="okpoc_0010_str_011">[이용안내]\n*최소금액 2,000P 이상 전환 가능합니다.\n*100P단위로 전환가능합니다.\n*포인트는 1:1 비율로 코인으로 전환됩니다.\n*포인트전환 관련 문의사항은\n고객센터(1899-7979)로 연락 부탁드립니다.</string>
    <string name="okpoc_0010_str_012">전환하기</string>
    <string name="okpoc_0010_str_013">포인트를</string>
    <string name="okpoc_0010_str_014">OK코인으로 전환하시겠습니까?</string>
    <string name="okpoc_0010_str_015">전환 전 :</string>
    <string name="okpoc_0010_str_016">전환 후 :</string>
    <string name="okpoc_0010_str_017">P</string>
    <string name="okpoc_0010_str_018">취소</string>
    <string name="okpoc_0010_str_019">확인</string>


    <string name="okpoc_0011_str_001">OK포인트 전환이 완료되었습니다.</string>
    <string name="okpoc_0011_str_002">전환요청</string>
    <string name="okpoc_0011_str_003">전환 후 OK포인트 잔액</string>
    <string name="okpoc_0011_str_004">전환 후 OK코인 잔액</string>
    <string name="okpoc_0011_str_005">요청일시</string>
    <string name="okpoc_0011_str_006">P</string>
    <string name="okpoc_0011_str_007">C</string>
    <string name="okpoc_0011_str_008">포인트-코인전환 관련 문의사항은\n고객센터(1899-7979)로 연락 부탁드립니다.</string>
    <string name="okpoc_0011_str_009">확인</string>


    <string name="okpoc_0012_str_001">포인트 전환내역</string>
    <string name="okpoc_0012_str_002">보유포인트</string>
    <string name="okpoc_0012_str_003">P</string>
    <string name="okpoc_0012_str_004">2021년01월</string>
    <string name="okpoc_0012_str_005">포인트 전환내역이 없습니다.</string>
    <string name="okpoc_0012_str_006">포인트 전환</string>
    <string name="okpoc_0012_str_007">전환완료</string>

    <string name="error_popup_str001">확인</string>
    <string name="error_popup_str002">에러코드 : </string>

    <string name="progress_str001">통신 중 입니다.</string>


</resources>